--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "license": "MPL-2.0",
     "repository": {
         "type": "git",
-        "url": "git://github.com/joyent/sdc-nfs.git"
+        "url": "https://github.com/joyent/sdc-nfs.git"
     },
     "bugs": {
         "url": "https://github.com/joyent/sdc-nfs/issues"
